# solana-programs

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
.husky/: commit-msg  pre-commit
program/basic/hello_world/: Cargo.toml
program/basic/hello_world/src/: lib.rs  tests.rs
tests/: hello-world.test.ts
