[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program.workspace = true

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[features]
anchor-debug = []
custom-heap = []
custom-panic = []

#[lints.rust]
#unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

